src/css/dashboard.css
#dashboardContainer {
    display: none;
    position: relative;
    width: 90%;
    height: calc(100% - 105px);
    min-height: 410px;
    min-width: 320px;
    margin-left: auto;
    margin-right: auto;
    align-items: center;
    flex-direction: column; 
    box-sizing: border-box;
    border-radius: 25px;
    backdrop-filter: blur(100px);
    -webkit-backdrop-filter: blur(100px);
    margin-top: 25px;
    
    opacity: 0;
    transition: opacity 0.5s ease-in-out;
}

#dashboardContainerCover {
    display: none;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 1);
    box-sizing: border-box;
    border-radius: 25px;
    z-index: 10;
    text-align: center;

    align-items: center;
    justify-content: center;

    color: white;
    font-family: settingsHeaderFontBold;
}

#dashboardSubContainer {
    display: flex;
    width: 100%;
    height: 100%;
    max-height: 100%;
    background-color: rgba(255, 255, 255, 0.25);
    justify-content: space-between;
    box-sizing: border-box;
    border-radius: 25px;
    z-index: 10;
    padding: 20px;
    min-height: 250px;

    color: white;
    font-family: settingsHeaderFontBold;

    /* border: 2px solid red; */

}

.no-transition {
    transition: none !important;
}

#distributionsContainer {
    display: flex;
    flex-direction: column;
    position: relative;
    max-height: 100%;
    width: 75%;
    min-width: 250px;
    margin-left: 10px;
    margin-right: 10px;

    /* border: 2px solid green; */
}

#dashboardSummaryStatsContainer {
    display: flex;
    position: relative;
    box-sizing: border-box;
    justify-content: space-around;
    width: 225px;
    margin-left: 10px;
    overflow-y: scroll;
    padding-bottom: 15px;

    /* border: 1px solid white; */
}

.summaryStatContainer {
    display: flex;
    align-items: center;
    justify-content: center;
    box-sizing: border-box;
    flex-direction: column;
    height: 80px;
    padding: 10px;
    border-radius: 25px;
    padding-top: 25px;
    padding-bottom: 25px;
    min-height: 125px;
    
    /* border: 3px solid rgb(255, 255, 255); */
}

#avgIntervalLengthStatContainer {
    margin-bottom: 15px;
}

.summaryStatHeader {
    display: flex;
    text-align: center;
    font-family: settingsHeaderFont; 
    justify-content: left;
    box-sizing: border-box;
    margin-bottom: 10px;
    font-size: 20px;
    
    /* border: 2px solid yellow; */
}

.summaryStat {
    display: flex;
    text-align: left;
    justify-content: left;
    font-size: 24px;
    font-family: settingsHeaderFontBold;
    box-sizing: border-box;
    /* border: 2px solid green; */
    white-space: nowrap;

    padding-left: 10px;
    padding-right: 10px;
    padding-top: 5px;
    padding-bottom: 5px;
    border-radius: 25px;
    border: 3px solid rgb(255, 255, 255);
}

.dashboardSummaryDivider {
    display: flex;
    position: relative;
    height: 1px;
    width: 100%; 
    background-color: rgba(255, 255, 255, 0.25);
    border: none; /* Remove the default border */
    margin: 0; /* Optionally, remove the default margin */
    padding: 0; /* Optionally, remove the default padding */
}

.dashboardSideContainer {
    display: flex;
    height: 100%;
    /* background-color: rgba(255, 255, 255, 0.1); */
    background-color: rgba(0, 0, 0, 1);
    box-sizing: border-box;
    border-radius: 25px;
    z-index: 12;
    padding-top: 15px;
    padding-left: 15px;
    padding-right: 15px;

    flex-direction: column;
    color: white;
    /* overflow-y: scroll; */
}

/* METRIC DISTRIBUTION */

#metricDistributionContainer {
    display: flex;
    flex-direction: column;
    /* position: relative; */
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 1);
    box-sizing: border-box;
    border-radius: 25px;
    z-index: 10;
    padding-top: 15px;
    padding-left: 15px;
    padding-right: 15px;
    margin-bottom: 10px;
    color: white;
    font-family: settingsHeaderFontBold;
    font-size: 24px;
    overflow-y: visible;

    /* border: 2px solid white; */
}

#metricDistributionCoverContainer {
    /* display: none; */
    display: flex;
    position: relative;
    height: 100%;
    text-align: center;
    justify-content: center;
    align-items: center;
    opacity: 1;
    transition: opacity 0.25s ease-out;

    /* border: 1px solid white; */
}



#metricDistributionCoverModuleContainer {
    display: flex;
    width: 95%;
    height: 70%;
    justify-content: space-around;

    /* border: 1px solid yellow; */
}

.chartsCoverModule {
    display: flex;
    position: relative;
    align-items: center;
    justify-content: center;
    border-radius: 25px;
    width: 40%;
    transition: background-color 0.15s ease-out;

    border: 2px solid white;
}

.chartsCoverModule:hover {
    cursor: pointer;
    background-color: rgba(130, 0, 170, 1);
}

#metricDistributionSubContainer {
    /* display: flex; */
    display: none;
    align-items: center;
    position: relative;
    flex-direction: column;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 1);
    box-sizing: border-box;
    z-index: 10;
    opacity: 0;
    transition: opacity 0.5s ease-out;

    /* border: 2px solid gray; */
}

#HC_icon_metric_charts {
    position: absolute;
    height: 100px;
    width: 100px;
    top: 50%; /* Center vertically */
    left: 50%; /* Center horizontally */
    transform: translate(-50%, -50%); /* Adjust the position to be exactly centered */
    z-index: -1;
    opacity: 1;
    transition: opacity 0.5s ease-in-out;
}

.metricChartsHr {
    width: 0%;
    /* margin-bottom: 25px; */
    border: 1px solid rgba(255, 255, 255, 0.15);
    opacity: 0;

    box-sizing: border-box;
    margin-bottom: 0;
    margin-top: 10px;

    transition: width 0.5s ease-out, opacity 0.05s ease-out;
}
/* ... */

